--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,17 +12,29 @@ html, body {
 
 .body1 {
   grid-area: 1/1/2/2;
-  background-color: white;
+  background-image: url(https://media.istockphoto.com/id/2165838619/vector/vector-colorful-abstract-universe-backgroud-with-galaxies-and-glowing-stars.jpg?s=612x612&w=0&k=20&c=oXF59JUdF4dQnOzds8whs7ZP2bhT4xihLaNKN1SEvyE=);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .body2 {
   grid-area: 2/1/6/2;
-  background-color: aqua;
+  background-image: url(https://wallpapers.com/images/hd/green-galaxy-4wc7rqec6o2m6zu1.jpg);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .body3 {
   grid-area: 1/2/2/6;
-  background-color: aqua;
+  background-image: url(https://media.istockphoto.com/id/1173451503/vector/space-background-with-realistic-nebula-and-shining-stars-colorful-cosmos-with-stardust-and.jpg?s=612x612&w=0&k=20&c=mEoyUd-7lXPnVzcDgN_LFdHTiGAnkzjlgtXEte9KMVc=);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 .body4 {
@@ -132,3 +144,35 @@ input {
   text-align: center;
   padding: 10%
 }
+
+.headEmbolden {
+  font-size: 150%;
+  color: black;
+  text-shadow: 0 0 6px greenyellow, 0 0 10px cyan;
+  padding: 5%;
+  font-weight: bolder;
+  background: black;
+  text-align: center;
+  margin: 2%;
+  border-radius: 15px;
+  border: solid grey 3px;
+}
+
+.creditHead {
+  text-align: center;
+  color: black;
+  font-size: 125%;
+  margin: 2%;
+  border-radius: 15px;
+  border: solid grey 3px;
+  background-color: black;
+}
+
+.cover {
+  background-image: url(https://media.istockphoto.com/id/1210188109/vector/space-background-green-realistic-cosmos-backdrop-starry-nebula-with-stardust-and-milky-way.jpg?s=612x612&w=0&k=20&c=oy2VKII4Ja_t5dM4QAhUh24QBo9-0di3pMEDSAbfMQs=);
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 100%;
+}
+
