--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -176,3 +176,26 @@ input {
   height: 100%;
 }
 
+.contentFrame {
+  border: solid black 3px;
+  margin: 5%;
+  padding: 5%;
+}
+
+.photoChosen {
+  width: 100%;
+  height: 100%;
+  max-height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: 10px;
+  border: solid black 3px;
+}
+
+.infoBox {
+  max-width: 100%;
+  max-height: 100%;
+  height: 100%;
+  width: 100%;
+}
