--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+
 html, body {
   height: 100%;
   margin: 0;
+  font-family: 'Orbitron', sans-serif;
 }
 
 .grid-body {
@@ -39,7 +42,11 @@ html, body {
 
 .body4 {
   grid-area: 2/2/6/6;
-  background-color: lightblue;
+  background: url(https://img.freepik.com/free-vector/bring-night-space-wallpaper-with-glowing-starfield_1017-53512.jpg?semt=ais_hybrid&w=740&q=80);
+  background-size: cover;
+  position: relative;
+  height: 100%;
+  width: 100%;
 }
 
 
@@ -104,7 +111,7 @@ html, body {
   background-color: gray;
   border: solid black 3px;
   margin: 1%;
-  padding: 5%;
+  padding: 1%;
   font-size: 150%;
   overflow:hidden;
   cursor:crosshair;
@@ -162,10 +169,12 @@ input {
   text-align: center;
   color: black;
   font-size: 125%;
+  text-shadow: 0 0 6px greenyellow, 0 0 10px cyan;
   margin: 2%;
   border-radius: 15px;
   border: solid grey 3px;
   background-color: black;
+  font-weight: bolder;
 }
 
 .cover {
@@ -177,15 +186,16 @@ input {
 }
 
 .contentFrame {
-  border: solid black 3px;
+  border: solid white 3px;
+  border-radius: 30px;
   margin: 5%;
   padding: 5%;
+  background-color: black;
 }
 
 .photoChosen {
   width: 100%;
-  height: 100%;
-  max-height: 100%;
+  height: 300px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -195,7 +205,22 @@ input {
 
 .infoBox {
   max-width: 100%;
-  max-height: 100%;
-  height: 100%;
   width: 100%;
+  background-color: white;
+  border: solid white 3px;
 }
+
+.title {
+  text-align: center;
+  font-weight: 500;
+}
+
+.textBox {
+  border: solid grey 3px;
+  background-color: lightslategray;
+  padding: 5%;
+  text-align: center;
+  overflow: auto;
+  font-size: 120%;
+}
+
